# face-classifier-app

./: .gitignore  .gitmodules  Readme.md  classifier-tf.py  settings.gradle
app/: CMakeLists.txt  build.gradle
app/release/: output.json
app/src/androidTest/java/jp/faceclass/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: detector.cpp  detector.h  dlib_detector.h  face_detect.cpp  jni_face_detect.cpp  utils.cpp
app/src/main/cpp/old/: detector.cpp  detector.h
app/src/main/java/camera/: CameraActivity.java  CameraOverlayLayout.java  DetectionsView.java  FrameProcessor.java  PermissionsDelegate.java
app/src/main/java/classification/: Classifier.java  Detection.java  Detector.java  Extractor.java  Recognition.java  Statistics.java
app/src/main/java/jp/faceclass/: CameraActivity.java  CameraOverlayLayout.java  DetectionsView.java  FaceDetectorProcessor.java  FrameProcessor.java  PermissionsDelegate.java
app/src/main/java/jp/faceclass/detection/: Detection.java  DlibFaceDetecor.java  TensorflowFaceDetector.java
app/src/main/java/jp/faceclass/nn/: Classifier.java  Detection.java  Detector.java  DlibFaceDetecor.java  EmbeddingsExtractor.java  Extractor.java  Recognition.java  TFClassifier.java  TensorflowFaceClassifier.java  TensorflowImageClassifier.java
app/src/main/java/jp/faceclass/recognition/: Classifier.java  TensorflowFaceClassifier.java
app/src/main/java/tensorflow/: RunStats.java  TensorFlowInferenceInterface.java
app/src/main/res/layout/: activity_camera.xml
app/src/main/res/values/: strings.xml  styleable.xml  styles.xml
app/src/test/java/jp/faceclass/: ExampleUnitTest.java
books/: Face Recognition by Independent Component Analysis.html
books/Face Recognition by Independent Component Analysis_files/: InstrumentPageStarterJS.js  pmc.min.css  tRaiETqnLgj758hTBazgd_2Fzt773GyyxFLU9m0FUrhBgVIj1hS_2F691NH_2BO1UAeHBp.js
gradle/wrapper/: gradle-wrapper.properties
models/opencv/: classifier_pairs.txt  lfw_classifier_opencv.yml
thesis/: FEIstyle.cls  polacek-blx.bib  polacek.acn  polacek.acr  polacek.alg  polacek.aux  polacek.bbl  polacek.bcf  polacek.blg  polacek.glg  polacek.glsdefs  polacek.ist  polacek.lof  polacek.lol  polacek.lot  polacek.out  polacek.pri  polacek.run.xml  polacek.tex  polacek.toc
thesis/img/rovnice/: actfnc.py  errors.py  gd.py  generalization.py  prewhiten.py  tf.py
thesis/includes/: abstract.tex  abstractEN.tex  attachmentA.tex  bibliography.bib  bibliography.blg  conclusion.tex  core.tex  glossary.tex  introduction.tex  thanks.tex
